# flock

./: .gitignore  README.md
.github/workflows/: lint.yml
autoresearch/: witness-layout-plan.md
autoresearch/probes/: Cargo.toml  README.md
autoresearch/probes/src/: bit_helpers.rs  blake3_vwide.rs  blake3_witness.rs  direct_common.rs  e6.rs  keccak_vwide.rs  keccak_witness.rs  layout.rs  lib.rs  lincheck_fold.rs  producer.rs  sha2_vwide.rs  sha2_witness.rs
autoresearch/probes/tests/: e0_oracle.rs  e1_builder_lockstep.rs  e2_zerocheck_oracle.rs  e3_fold_oracle.rs  e6_roundtrip.rs  keccak_vwide_lockstep.rs
autoresearch/results/: e1_2026-07-02.tsv  e1_direct_2026-07-02.tsv  e1_fair_2026-07-02.tsv  e2_2026-07-02.tsv  e3_2026-07-02.tsv  e6_2026-07-02.tsv  e6b_2026-07-03.tsv
benchmarks/: BENCHMARKS.md  bench_hash_throughput.sh  bench_keccak.sh  bench_sha256.sh
benchmarks/spartan2/: neutronnova_nn_bytes.patch  setup.sh  spartan_sp_bytes.patch
crates/flock-core/src/: challenger.rs  field.rs  lib.rs  lincheck.rs  merkle.rs  pcs.rs  permutation.rs  proof.rs  r1cs.rs  schedule.rs  scratch.rs  union.rs  verifier.rs  zerocheck.rs
crates/flock-core/tests/: union_lincheck.rs
crates/flock-prover/: Cargo.toml
crates/flock-prover/benches/: apply_block_diag_probe.rs  blake3_chain_proof.rs  blake3_fast_vs_slim.rs  blake3_lig_vs_bf.rs  blake3_native_chain.rs  blake3_proof.rs  e2e_zerocheck.rs  eq_build_probe.rs  (+43 more)
docs/: multi-table-design.tex
paper/flock_py/: README.md  field.py  flock.py  flock_perf.py  mle.py  pcs.py  r1cs.py  sumcheck.py  test_flock.py  transcript.py
(+65 files in other folders)
