[package]
name = "flock-autoresearch-probes"
version = "0.1.0"
edition = "2024"

# Standalone package (autoresearch/ is gitignored; opt out of the repo workspace).
[workspace]

[dependencies]
flock-core = { path = "../../crates/flock-core" }
flock-prover = { path = "../../crates/flock-prover" }
rayon = "1.10"

# Match the repo's bench profile so numbers are comparable.
[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
